# DevelopmentGroup

./: .gitignore
DDS_Bank_HMI/: CMakeLists.txt  Deposit.qml  PopupMessage.qml  SelectFund.qml  SelectLanguage.qml  Transfer.qml  Visualize.qml  Withdraw.qml  bank.idl  bankDesign.qea  main.cpp  main.qml  mainBack.cpp  mainFront.cpp  qml.qrc
DDS_Bank_HMI/backend/: CMakeLists.txt
DDS_Bank_HMI/backend/controller/operation/: DepositMoneyController.cpp  DepositMoneyController.hpp
DDS_Bank_HMI/backend/source/: CMakeLists.txt
DDS_Bank_HMI/backend/source/controller/operation/: DepositMoneyController.cpp  DepositMoneyController.hpp  SelectFundController.cpp  SelectFundController.hpp  TransferMoneyController.cpp  TransferMoneyController.hpp  WithdrawMoneyController.cpp  WithdrawMoneyController.hpp
DDS_Bank_HMI/backend/source/controller/operations/: DepositMoney.cpp  DepositMoney.hpp  DepositMoneyController.cpp  DepositMoneyController.hpp  SaveFund.cpp  SaveFund.hpp  SelectFund.cpp  SelectFund.hpp  SelectFundController.cpp  SelectFundController.hpp  TransferMoney.cpp  TransferMoney.hpp  TransferMoneyController.cpp  TransferMoneyController.hpp  WithdrawMoney.cpp  WithdrawMoney.hpp  WithdrawMoneyController.cpp  WithdrawMoneyController.hpp
DDS_Bank_HMI/backend/source/controller/systemConfiguration/: InitializeApplication.cpp  InitializeApplication.hpp
DDS_Bank_HMI/backend/source/controller/visualization/: ShowMessage.cpp  ShowMessage.hpp  ShowMessageController.cpp  ShowMessageController.hpp
DDS_Bank_HMI/backend/unittest/: CMakeLists.txt
DDS_Bank_HMI/backend/view/dds/operations/: BackDDSView.cpp  BackDDSView.hpp
DDS_Bank_HMI/frontend/: CMakeLists.txt
DDS_Bank_HMI/frontend/source/: CMakeLists.txt
DDS_Bank_HMI/frontend/source/viewModel/signal/: DepositMoneySignal.cpp  DepositMoneySignal.hpp  MoneyTransferedSignal.cpp  MoneyTransferedSignal.hpp  MoneyWithdrawnSignal.cpp  MoneyWithdrawnSignal.hpp  TransferedMoneySignal.cpp  TransferedMoneySignal.hpp  WithdrawnMoneySignal.cpp  WithdrawnMoneySignal.hpp
DDS_Bank_HMI/frontend/view/dds/operations/: FrontDDSView.cpp  FrontDDSView.hpp
DDS_Bank_HMI/frontend/view/ui/operations/: DepositMoneyView.cpp  DepositMoneyView.hpp
DDS_Bank_HMI/frontend/viewModel/dds/operations/: DDSViewModel.hpp
DDS_Bank_HMI/frontend/viewModel/signal/: DepositMoneySignal.cpp  DepositMoneySignal.hpp  MoneyDepositedSignal.cpp  MoneyDepositedSignal.hpp
DDS_Bank_HMI/frontend/viewModel/ui/operations/: DepositViewModel.cpp  DepositViewModel.hpp
DDS_Bank_HMI/idl/: README_x64Linux4gcc7.3.0.txt  bank.cxx  bank.hpp  bank.idl  bankPlugin.cxx  bankPlugin.hpp
DDS_Bank_HMI/lib/: CMakeLists.txt
DDS_Bank_HMI/model/: AllFunds.cpp  AllFunds.hpp  CMakeLists.txt  Deposit.cpp  Deposit.hpp  Fund.cpp  Fund.hpp  FundType.hpp  Operation.hpp  mainModel.cpp
DDS_Bank_HMI/model/signal/: MoneyDepositedSignal.cpp  MoneyDepositedSignal.hpp
DDS_Bank_HMI/model/source/: AllFunds.cpp  AllFunds.hpp  AllFundsDDSInterface.hpp  CMakeLists.txt  Fund.cpp  Fund.hpp  FundDecreaseAmountByFundTypeInterface.hpp  FundDecreaseAmountInterface.hpp  FundGetAmountByFundTypeInterface.hpp  FundGetAmountInterface.hpp  FundGetParameterInterface.hpp  FundGetParametersInterface.hpp  FundIncreaseAmountInterface.hpp  FundInterface.hpp  FundSetAmountByFundTypeInterface.hpp  FundSetAmountInterface.hpp  FundSetFundTypeInterface.hpp  FundSetParameterInterface.hpp  FundTransferAmountInterface.hpp  FundType.hpp  Operation.cpp  Operation.hpp
DDS_Bank_HMI/model/source/operations/: AllFunds.cpp  AllFunds.hpp  AllFundsDDSInterface.hpp  Fund.cpp  Fund.hpp  FundDecreaseAmountByFundTypeInterface.hpp  FundDecreaseAmountInterface.hpp  FundGetAmountByFundTypeInterface.hpp  FundGetAmountInterface.hpp  FundGetParametersInterface.hpp  FundIncreaseAmountInterface.hpp  FundInterface.hpp  FundSetAmountByFundTypeInterface.hpp  FundSetParameterInterface.hpp  FundTransferAmountInterface.hpp  FundType.hpp  iAllFundsDDS.hpp  iFund.hpp  iFundDecreaseAmount.hpp  iFundGetAmount.hpp  iFundGetAmountByFundType.hpp  iFundGetParameters.hpp  iFundIncreaseAmount.hpp  iFundSetAmountByFundType.hpp  iFundSetParameter.hpp  iFundTransferAmount.hpp  kFundType.hpp
DDS_Bank_HMI/model/source/signal/: MoneyDepositedSignal.cpp  MoneyDepositedSignal.hpp  MoneyTransferedSignal.cpp  MoneyTransferedSignal.hpp  MoneyWithdrawnSignal.cpp  MoneyWithdrawnSignal.hpp  UpdatedFundSignal.cpp  UpdatedFundSignal.hpp  UpdatedFundTypeSignal.cpp  UpdatedFundTypeSignal.hpp  UpdatedModelSignal.cpp  UpdatedModelSignal.hpp
DDS_Bank_HMI/model/source/visualization/: AllMessages.cpp  AllMessages.hpp  AllMessagesInterface.hpp  Message.cpp  Message.hpp  MessageInterface.cpp  MessageInterface.hpp  MessageType.hpp  OperationDualFund.cpp  OperationDualFund.hpp  OperationInterface.cpp  OperationInterface.hpp  OperationSingleFund.cpp  OperationSingleFund.hpp  OperationType.hpp
DDS_Bank_HMI/model/unittest/: CMakeLists.txt
DDS_Bank_HMI/model/unittest/allFunds/: AllFundsUnitTest.cpp  CMakeLists.txt
DDS_Bank_HMI/model/unittest/allModel/: AllModelTest.cpp  CMakeLists.txt
DDS_Bank_HMI/model/unittest/fund/: CMakeLists.txt  FundUnitTest.cpp
DDS_Bank_HMI/model/unittest/language/: CMakeLists.txt  LanguageEnglishUnitTest.cpp  LanguageSpanishUnitTest.cpp
DDS_Bank_HMI/utils/: SignalPublisher.hpp
DDS_Bank_HMI/utils/dds/: DDSDataReader.hpp  DDSDataWriter.hpp
DDS_Bank_HMI/utils/designPattern/: SignalPublisher.hpp
DDS_Bank_HMI/utils/so/: Shutdown.hpp
DDS_Bank_HMI/utils/source/: CMakeLists.txt
DDS_Bank_HMI/utils/source/dds/: DDSDataReader.cpp  DDSDataReader.hpp  DDSDataWriter.cpp  DDSDataWriter.hpp  DDSView.cpp  DDSView.hpp
DDS_Bank_HMI/utils/source/designPattern/: SignalPublisher.hpp  SignalSubscriber.hpp
DDS_Bank_HMI/utils/source/so/: Shutdown.cpp  Shutdown.hpp
DDS_Bank_HMI/view/: DepositMoneyView.cpp  DepositMoneyView.hpp
DDS_Bank_HMI/view/dds/: BackDDSView.cpp  BackDDSView.hpp  FrontDDSView.cpp  FrontDDSView.hpp
DDS_Bank_HMI/viewModel/: DepositViewModel.cpp  DepositViewModel.hpp
DDS_Bank_HMI/viewModel/signal/: DepositMoneySignal.cpp  DepositMoneySignal.hpp
(+194 files in other folders)
